# weightlifting

./: .gitignore  LICENSE  README.md  meta.yaml  plotstartingstrength.py  pyproject.toml  setup.cfg
plot_weightlifting/: global_vars.py  main.py  plotstartingstrength.py
