[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "plot_weightlifting"
version = "0.2.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name="Eric Smith", email="esmith4422@gmail.com" },
]
description = "Plots weightlifting for 5x5 program like strating strength"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "matplotlib >= 3.3",
    "numpy >= 1.20",
    "pandas >= 1.2",
]

[project.scripts]
plotlifts = "plot_weightlifting.main:main" 
